--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -1,77 +1,49 @@
+# Allows us to start the stack without touching too much of our local system
+#
+# note: the application initialization will download/unpack/configure files
+#       in the local directory...
+#
+# ##### Usage:
+# *0. Create a broken symlink: `ln -sf "/.npm-packages/node_modules/" node_modules`
+# 1. Start the database: `docker-compose up -d mongo`
+# 2. Start the application:  `docker-compose run formio`
+# [3]. Stop the database: `docker-compose down` (add --volumes to clear data)
+# [4]. Remove lingering docker images: `docker-compose down -v --rmi all`
+#
+# *TODO: Step 0 is for the bcrypt binary compiled on alpine, which is required...
+#        but this step feels like an anti-pattern and a better approach should be found
+
 version: '3.7'
 services:
-  
-  formio-api-app:
-    image: tiredofit/formio-api
-    container_name: formio-api-app
-    labels:
-    - traefik.enable=true
-    - traefik.frontend.rule=Host:formio.example.com
-    - traefik.port=80
-    - traefik.protocol=http
-    - traefik.docker.network=proxy
-    - traefik.backend=formio-api-app
-    volumes:
-    - ./templates:/app/templates
-    environment:
-    - VIRTUAL_HOST=formio.example.com
-    - VIRTUAL_NETWORK=proxy
-    - VIRTUAL_PORT=3001
-    - LETSENCRYPT_HOST=formio.example.com
-    - LETSENCRYPT_EMAIL=email@example.com
-
-    - CONTAINER_NAME=formio-app
-
-    - DB_HOST=formio-db-mongo
-
-    - ROOT_EMAIL=admin@example.com
-    - ROOT_PASS=password
-
-    - DEBUG_MODE=FALSE
-    - PROJECT_TEMPLATE=default
-    networks:
-    - proxy
-    - internal
-    - services
+  mongo:
+    image: mongo:4.1
     restart: always
-
-  formio-db-mongo:
-    image: mongo
-    container_name: formio-db-mongo
     volumes:
-    - ./db:/data/db
-    command: mongod --smallfiles
+      - mdb-data:/data/db
     environment:
-    - CONTAINER_NAME=formio-db-mongo
-    networks:
-    - internal
-    - services
-    restart: unless-stopped 
+      MONGO_INITDB_ROOT_USERNAME:
+      MONGO_INITDB_ROOT_PASSWORD:
 
-  formio-db-mongo-backup:
-    image: tiredofit/db-backup
-    container_name: formio-db-mongo-backup
+  formio:
+    image: formio-api:latest
+    #build: ./
+    # The app will restart until Mongo is listening
+    restart: always
     links:
-    - formio-db-mongo
-    volumes:
-    - ./dbbackup:/backups
+      - mongo
+    ports:
+      - "3001:3001"
+    # The application wants to download things to the local directory
+    # TODO: really wish I could mount this as read-only
+#    volumes:
+#      - ./:/app:rw
     environment:
-    - DB_TYPE=mongo
-    - DB_HOST=formio-db-mongo
-    - DB_DUMP_FREQ=1440
-    - DB_DUMP_BEGIN=0000
-    - DB_CLEANUP_TIME=8640
-    - MD5=TRUE
-    - COMPRESSION=GZ
-    networks:
-    - internal
-    - services
-    restart: always
+      DEBUG: formio:*
+      NODE_CONFIG: '{"mongo": "mongodb://mongo:27017/formio"}'
+      ROOT_EMAIL: admin@example.com
+      ROOT_PASSWORD: CHANGEME
+    stdin_open: true  # -i
+    tty: true         # -t
 
-networks:
-  proxy:
-    external: true
-  internal:
-    external: false
-  services:
-    external: true
+volumes:
+  mdb-data:
