--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -25,8 +25,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD:
 
   formio:
-    image: formio-api:latest
-    #build: ./
+    image: formio-ce:latest
     # The app will restart until Mongo is listening
     restart: always
     links:
